feat: add server logic
